<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/registerFirstName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:id="@+id/firstName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/registerLastName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:id="@+id/lastName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/registerStudentId"
        android:minHeight="48dp"
        android:padding="10dp"
        android:id="@+id/studentId"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:id="@+id/password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:padding="10dp"
        android:maxWidth="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#FF5722"
        android:id="@+id/registerBtn"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Redirect Login"
        android:id="@+id/redirectToLogin"
    />

</LinearLayout>